--- a/src/modules/share/tpl/wrapper.html
+++ b/src/modules/share/tpl/wrapper.html
@@ -16,9 +16,10 @@
         </ion-nav-view>
     </ion-side-menu-content>
 
+    <!--
     <ion-side-menu side="left">
         <ion-header-bar class="bar-assertive">
-            <h1 class="title">Left Menu</h1>
+            <h1 class="title">Menu</h1>
         </ion-header-bar>
         <ion-content>
             <ul class="list">
@@ -27,5 +28,6 @@
             </ul>
         </ion-content>
     </ion-side-menu>
+    -->
 
 </ion-side-menus>
