Cambio informacion de las pizzas

--- a/src/modules/products/tpl/products.list.html
+++ b/src/modules/products/tpl/products.list.html
@@ -2,7 +2,7 @@
     <ion-content>
         <div class="row main-message">
             <div class="col text-center">
-                Selecciona sabor y tamaño
+                Elige sabor y tamaño
             </div>
         </div>
         <div class="row size-options">
