--- a/src/modules/orders/customize/orders.customize.html
+++ b/src/modules/orders/customize/orders.customize.html
@@ -43,6 +43,10 @@
                                 <div class="text-center">
                                     {{item.name}}
                                 </div>
+                                <div class="text-center" style="font-weight: bold; color: #EE233F">
+                                    {{item.price | currency : '$' : 0}}
+                                </div>
+
                             </div>
                         </div>
                     </div>
