--- a/src/modules/orders/customize/orders.customize.html
+++ b/src/modules/orders/customize/orders.customize.html
@@ -1,6 +1,8 @@
 <ion-view>
     <ion-content id="order-container">
         <div class="row order-title m-t-1">
+            <div style="height: 400px;background: red">
+            </div>
             <div class="col text-center">{{orderCtrl.view.title}}</div>
             <div class="col text-center">Total: {{cusOrderCtrl.order.total|currency:'$':0}}</div>
         </div>
