mn/loading  se implementa la funcionalidad para que el servicio del loader

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,6 @@
 <script src="js/vendors.min.js"></script>
 <script src="js/app.min.js"></script>
 
-<loader></loader>
+<loader color="blue"></loader>
 </body>
 </html>
