se incluye la opción de mostrar texto en la capa del loader

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,6 @@
 <script src="js/vendors.min.js"></script>
 <script src="js/app.min.js"></script>
 
-<loader color="blue"></loader>
+<loader color="blue" text="loaderText"></loader>
 </body>
 </html>
