se modifica la posicion del boton cerrar del componente de selector de area de un ingrediente en la pizza

--- a/src/modules/orders/customize/orders.customize.html
+++ b/src/modules/orders/customize/orders.customize.html
@@ -47,7 +47,7 @@
                                 <span class="badge badge-assertive" ng-if="item.qty">{{item.qty.total}}</span>
                                 <div>
                                     <div class="text-center">
-                                        <img ng-src="{{item.image}}">
+                                        <img class="preview-product-no-overflow" ng-src="{{item.image}}">
                                     </div>
                                     <div class="text-center">
                                         {{item.name}}
