--- a/src/modules/common/tpl/selectAreaPizza.html
+++ b/src/modules/common/tpl/selectAreaPizza.html
@@ -1,3 +1,7 @@
+<button class="cancel-btn" ng-class="{ 'full' : showCloseBtn,'jello animated' :  animateCloseBtn }" ng-click="clearSelect()">
+    <i class="fa fa-times"></i>
+</button>
+
 <div class="select-product-area ingredient text-right  ">
     <div >
         <div class="text-center image-container">
@@ -9,33 +13,24 @@
 </div>
 
 <div class="select-product-area-btns" ng-class="{ 'show-buttons' : showButtons }">
-    <div class="four-inline">
+    <div class="three-inline">
         <button class="btn-circle-image" ng-click="actionLeft()" ng-class="{ 'animated rubberBand' : animations[0].includeAnimation }">
             <img src="assets/images/izquierda.png" alt="Izq">
             <i class="fa fa-long-arrow-left"></i>
         </button>
     </div>
 
-    <div class="four-inline">
+    <div class="three-inline">
         <button class="btn-circle-image" ng-click="actionAll()" ng-class="{ 'animated rubberBand' : animations[1].includeAnimation }">
             <img src="assets/images/llena.png" alt="">
             <i class="fa fa-arrows-h"></i>
         </button>
     </div>
 
-    <div class="four-inline">
+    <div class="three-inline">
         <button class="btn-circle-image" ng-click="actionRight()" ng-class="{ 'animated rubberBand' : animations[2].includeAnimation }">
             <img src="assets/images/derecha.png" alt="">
             <i class="fa fa-long-arrow-right"></i>
         </button>
     </div>
-
-
-    <div class="four-inline">
-        <button class="btn-circle-image cancel-btn" ng-click="clearSelect()"  ng-class="{ 'animated rubberBand' : animations[3].includeAnimation }">
-            <i class="fa fa-times"></i>
-            <i class="fa fa-fax" style="color: #fff"></i>
-        </button>
-    </div>
-
 </div>
