Se hace un ajuste de estilos en la vista del modulo location

--- a/src/modules/location/tpl/location.index.html
+++ b/src/modules/location/tpl/location.index.html
@@ -12,10 +12,7 @@
                     <article>
                         <aside>
 
-                            <input type="text" required ng-model="locationIndexCtrl.textAddress" class="input-address" />
-                            <span class="label-input-custom">
-                                Dirección
-                            </span>
+                            <input type="text" required ng-model="locationIndexCtrl.textAddress" class="input-address" placeholder="Ingresa tu dirección" />
                             <!---
                             <div class="piz-col col-left">
                                 <select ng-model="locationIndexCtrl.address.comp1">
