--- a/src/modules/shops/tpl/shops.html
+++ b/src/modules/shops/tpl/shops.html
@@ -1,5 +1,5 @@
 <ion-view>
-    <ion-content id="shop-container">
+    <ion-content id="shops-container">
         <ion-nav-view></ion-nav-view>
     </ion-content>
 </ion-view>
