--- a/src/modules/shops/tpl/shops.list.html
+++ b/src/modules/shops/tpl/shops.list.html
@@ -6,7 +6,7 @@
             </div>
         </div>
         <div class="list Shopucts-list">
-            <a class="item item-thumbnail-right" ng-repeat="shop in listShopCtrl.shops" ng-click="listShopCtrl.selectShop(shop)">
+            <a class="item item-thumbnail-right shop-item" ng-repeat="shop in listShopCtrl.shops" ng-click="listShopCtrl.selectShop(shop)">
                 <img ng-src="{{::shop.img}}">
                 <h2>{{::shop.name}}</h2>
                 <p>{{::shop.location}}</p>
